--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,8 +26,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
+            android:name=".MainActivity">
+        </activity>
+        <activity
+            android:name=".PodcastActivity">
         </activity>
     </application>
 
