ajout du code pour le podcast dans le service

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,7 +36,7 @@
         </activity>
         
         <service
-			android:name=".os_service.MediaPlayerService">
+			android:name=".os_service.PodcastPlaybackService">
 		</service>
     </application>
 
