--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,16 +4,13 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk android:minSdkVersion="8" />
-    
-    <uses-permission
-		android:name="android.permission.INTERNET" />
+    <uses-sdk
+        android:minSdkVersion="8"
+        android:targetSdkVersion="13" />
 
-    <uses-permission
-		android:name="android.permission.ACCESS_NETWORK_STATE" />
-    
-    <uses-permission
-		android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
         android:name=".ADGApplication"
@@ -28,16 +25,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity" >
         </activity>
-        <activity
-            android:name=".PodcastActivity">
+        <activity android:name=".PodcastActivity" >
         </activity>
-        
-        <service
-			android:name=".os_service.PodcastPlaybackService">
-		</service>
+
+        <service android:name=".os_service.PodcastPlaybackService" >
+        </service>
     </application>
 
 </manifest>
