--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,7 +13,6 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
-        android:name=".ADGApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -30,7 +29,7 @@
         <activity android:name=".PodcastActivity" >
         </activity>
         <activity
-            android:name=".ActionBarTabsPager"
+            android:name=".MainActivity"
             android:theme="@style/Theme.Sherlock" >
         </activity>
 
