--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application
+        android:name=".ADGApplication"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name" >
         <activity
@@ -26,8 +27,14 @@
         </activity>
         <activity android:name=".PodcastActivity" >
         </activity>
+        <activity android:name=".InfoActivity" >
+        </activity>
         <activity
             android:name=".MainActivity"
+            android:theme="@style/Theme.Sherlock" >
+        </activity>
+        <activity
+            android:name=".WebActivity"
             android:theme="@style/Theme.Sherlock" >
         </activity>
 
