--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -15,7 +15,8 @@
     <application
         android:name=".ADGApplication"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:hardwareAccelerated="true" >
         <activity
             android:name=".SplashActivity"
             android:label="@string/app_name" >
