--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="libs/roboguice-2.0b3.jar" sourcepath="libs/libs-src/roboguice-1.1.2-sources.jar"/>
 	<classpathentry kind="lib" path="libs/acra-4.2.3.jar"/>
 	<classpathentry kind="lib" path="libs/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="libs/actionbarsherlock-plugin-compat-lib-4.0.0-SNAPSHOT.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
