--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,14 @@
 		<dependency>
 			<groupId>org.roboguice</groupId>
 			<artifactId>roboguice</artifactId>
-			<version>2.0b3</version>
+			<version>2.0-SNAPSHOT</version>
+			<scope>compile</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>android.support</groupId>
+					<artifactId>compatibility-v4</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.acra</groupId>
@@ -43,11 +50,6 @@
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.5</version>
-		</dependency>
-		<dependency>
-			<groupId>android</groupId>
-			<artifactId>compatibility-v4</artifactId>
-			<version>r3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -83,6 +85,16 @@
 		<repository>
 			<id>acra-releases</id>
 			<url>http://acra.googlecode.com/svn/repository/releases</url>
+		</repository>
+		<repository>
+			<id>oss.sonatype.org</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
 		</repository>
 	</repositories>
 </project>
