--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,58 +12,37 @@
      WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
      See the License for the specific language governing permissions and
      limitations under the License.
--->
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.analysedesgeeks.android"
-    android:versionCode="1"
-    android:versionName="1.0" >
+--><manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="10" android:versionName="1.0.0" package="com.analysedesgeeks.android">
 
-    <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="13" />
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="13"/>
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
 
-    <application
-        android:name=".ADGApplication"
-        android:hardwareAccelerated="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/Theme.Sherlock" >
-        <activity
-            android:name=".SplashActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.NoTitleBar" >
+    <application android:debuggable="false" android:hardwareAccelerated="true" android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:name=".ADGApplication" android:theme="@style/Theme.Sherlock">
+        <activity android:label="@string/app_name" android:name=".SplashActivity" android:theme="@android:style/Theme.NoTitleBar">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity
-            android:name=".PodcastActivity" >
+        <activity android:name=".PodcastActivity">
         </activity>
-        <activity
-            android:name=".InfoActivity" >
+        <activity android:name=".InfoActivity">
         </activity>
-        <activity
-            android:name=".AboutActivity" >
+        <activity android:name=".AboutActivity">
         </activity>
-        <activity
-            android:name=".MainActivity">
+        <activity android:name=".MainActivity">
         </activity>
-        <activity
-            android:name=".WebActivity" >
+        <activity android:name=".WebActivity">
         </activity>
-        <activity
-            android:name=".ContactActivity" >
+        <activity android:name=".ContactActivity">
         </activity>
-        <activity
-            android:name=".SourceCodeActivity">
+        <activity android:name=".SourceCodeActivity">
         </activity>
 
-        <service android:name=".os_service.PodcastPlaybackService" />
+        <service android:name=".os_service.PodcastPlaybackService"/>
     </application>
 
 </manifest>
