--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,68 @@
 					</sdk>
 					<deleteConflictingFiles>true</deleteConflictingFiles>
 					<undeployBeforeDeploy>true</undeployBeforeDeploy>
+					<sign>
+						<debug>false</debug>
+					</sign>
+					<zipalign>
+						<verbose>true</verbose>
+						<inputApk>${project.build.directory}/${project.artifactId}.apk</inputApk>
+						<outputApk>${project.build.directory}/${project.artifactId}-signed-aligned.apk
+						</outputApk>
+					</zipalign>
+					<manifest>
+						<debuggable>false</debuggable>
+						<versionCodeAutoIncrement>true</versionCodeAutoIncrement>
+					</manifest>
+					<proguard>
+						<skip>true</skip>
+					</proguard>
 				</configuration>
 				<extensions>true</extensions>
+				<executions>
+					<execution>
+						<id>manifestUpdate</id>
+						<phase>process-resources</phase>
+						<goals>
+							<goal>manifest-update</goal>
+						</goals>
+					</execution>
+					<execution>
+						<id>alignApk</id>
+						<phase>package</phase>
+						<goals>
+							<goal>zipalign</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jarsigner-plugin</artifactId>
+				<version>1.2</version>
+				<executions>
+					<execution>
+						<id>signing</id>
+						<goals>
+							<goal>sign</goal>
+							<goal>verify</goal>
+						</goals>
+						<phase>package</phase>
+						<inherited>true</inherited>
+						<configuration>
+							<removeExistingSignatures>true</removeExistingSignatures>
+							<archiveDirectory />
+							<includes>
+								<include>${project.build.directory}/${project.artifactId}.apk</include>
+							</includes>
+							<keystore>${sign.keystore}</keystore>
+							<alias>${sign.alias}</alias>
+							<storepass>${sign.storepass}</storepass>
+							<keypass>${sign.keypass}</keypass>
+							<verbose>true</verbose>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
