--- a/.classpath
+++ b/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="libs/guice-2.0-no_aop.jar"/>
 	<classpathentry kind="lib" path="libs/acra-4.2.3.jar"/>
 	<classpathentry kind="lib" path="libs/commons-lang-2.5.jar"/>
-	<classpathentry kind="lib" path="libs/actionbarsherlock-plugin-compat-lib-4.0.0-SNAPSHOT.jar" sourcepath="libs/libs-src/actionbarsherlock-library-4.0.0-SNAPSHOT.zip"/>
 	<classpathentry kind="lib" path="libs/roboguice-2.0b3.jar" sourcepath="libs/libs-src/roboguice-2.0b3-sources.jar"/>
+	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
